2008-07-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* acinclude.m4:
	Switch ${CACAO} for ${WITH_CACAO} in
	Shark/core/zero rules and use ${use_zero}
	instead of ${ZERO_BUILD_TRUE}.
	* aclocal.m4,
	* configure:
	Regenerated.

2008-07-02  Gary Benson  <gbenson@redhat.com>
	
	* acinclude.m4:
	Fix detection of Shark/core build.
	* aclocal.m4,
	* configure:
	Regenerated.
	
2008-07-02  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* IcedTeaPlugin.cc: New file.
	* Makefile.am: Add ENABLE_LIVECONNECT and ENABLE_PLUGIN
	conditionals.  Add IcedTeaPlugin.so target.
	* Makefile.in: Regenerate.
	* README: Document --enable-liveconnect.
	* configure.ac: Define ENABLE_LIVECONNECT and ENABLE_PLUGIN
	conditionals.  Add --enable-liveconnect option.  Add XULRunner
	pkgconfig checks.
	* configure: Regenerate.
	* .hgignore: Add IcedTeaPlugin.so.
	* patches/icedtea-liveconnect.patch: New file.
	* patches/icedtea-plugin.patch: New file.
	* patches/icedtea-webstart.patch: New file.
	* patches/icedtea-netx-plugin.patch: Remove file.
	* patches/icedtea-webservices.patch: Remove file.

2008-07-02  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-cacao.patch: openjdk/jdk/make/docs/Makefile:
	Set MAX_VM_MEMORY to 768 for 32bit builds.

2008-07-02  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-hotspot-6b06-7b24.patch: Update copyright notice in
	hotspot/src/share/vm/interpreter/bytecodeInterpreterWithChecks.x[ms]l
	from 7b29.

2008-07-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Move new aliases to end with others,
	and fix path of jtreg.jar.
	* Makefile.in: Regenerated.

2008-07-01  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (stamps/icedtea.stamp, stamps/icedtea-debug.stamp): Re-
	added, (icedtea-debug-against-icedtea): New target, (icedtea-clean):
	Remove stamps/icedtea-debug.stamp.
	* Makefile.in: Regenerate.

2008-07-01  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (ICEDTEA_PATCHES, ICEDTEA_FSG_PATCHES): Move