@@ -1,4 +1,10 @@
-2008-07-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+2008-07-02  Matthias Klose  <doko@ubuntu.com>
+
+	* Makefile.am: Write patch information from HACKING into
+	the patch stamp files.
+	* Makefile.in: Regenerate.
+
+2008-07-02  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* acinclude.m4:
 	Switch ${CACAO} for ${WITH_CACAO} in
